# SANA

./: .gitignore  .gitmodules  .nfs00000000048cb3ee0000002c  CIQ.sh  CMakeLists.txt  CompleteGraph.el  Jurisica-alignment.c  Jurisica-clustering.c  Makefile  README.md  STYLE_GUIDE.txt  TUTORIAL.txt  codingConventions.txt  compare.sh  core.10104  core.10121  core.10838  core.11170  core.11186  core.11356  core.12437  core.12821  core.12970  core.1317  core.13484  core.13487  core.1354  core.1382  core.1427  core.1438  core.18568  core.18619  core.18656  core.18872  core.20824  core.21730  core.21809  core.21811  core.21812  core.2399  (+38 more)
src/lib-sana/: CMakeLists.txt
src/lib-sana/Alignment/: Alignment.hpp  MultiAlignment.hpp  PairwiseAlignment.cpp  PairwiseAlignment.hpp
src/lib-sana/Configuration/: SANAConfiguration.cpp  SANAConfiguration.hpp
src/lib-sana/Core/: SANA.cpp  SANA.hpp
src/lib-sana/Graph/: BinaryGraph.cpp  BinaryGraph.hpp  Graph.cpp  Graph.hpp  WeightedGraph.cpp  WeightedGraph.hpp
src/lib-sana/Measure/: Measure.h
src/lib-sana/Measures/: EdgeCorrectness.cpp  EdgeCorrectness.hpp  ExternalWeightedEdgeConservation.cpp  GoAverage.cpp  GoSimilarity.cpp  GoSimilarity.hpp  Measure.cpp  Measure.hpp  SymmetricSubstructureScore.cpp  SymmetricSubstructureScore.hpp
src/lib-sana/NetPile/: MultiNetPile.hpp  WeightedNetPile.hpp
src/lib-sana/Result/: SANAResult.cpp  SANAResult.hpp
src/lib-sana/TemperatureSchedule/: LinearRegression.cpp  TemperatureSchedule.cpp  TemperatureSchedule.hpp  TemperatureScheduleBuilder.hpp
src/lib-sana/Utils/: Random.cpp  Timer.cpp  Utils.cpp  Utils.hpp
src/lib-sana/go/: resnik-readme
src/lib-sana/include/: Alignment.hpp  BinaryGraph.hpp  ExternalWeightedEdgeConservation.hpp  GoAverage.hpp  GoSimilarity.hpp  Graph.hpp  LinearRegression.hpp  Measure.hpp  NetPile.hpp  PairwiseNetPile.hpp  ParetoNetPile.hpp  Random.hpp  SANAConfiguration.hpp  Timer.hpp  Utils.hpp  WeightedGraph.hpp
test/lib-sana/: CMakeLists.txt
wrappedAlgorithms/NATALIE/src/: CMakeLists.txt  LICENSE  README  README.md
wrappedAlgorithms/NATALIE/src/data/: cel.gml  cel_sce.seqSim  dme.gml  dme_cel.seqSim  dme_sce.seqSim  earbell.txt  hsa.gml  hsa_cel.seqSim  hsa_dme.seqSim  hsa_sce.seqSim  mmu.gml  mmu.gml.lgf  mmu_cel.seqSim  mmu_dme.seqSim  mmu_hsa.seqSim  mmu_sce.seqSim  rno.gml  rno_cel.seqSim  rno_dme.seqSim  rno_hsa.seqSim  rno_mmu.seqSim  rno_sce.seqSim
wrappedAlgorithms/NATALIE/src/src/: analyzealignment.cpp  analyzealignment.h  analyzego.cpp  analyzego.h  config.h  config.h.in  demo.cpp  gna.h  makegraphs.cpp  natalie.cpp  natalie.h  nataliecplex.cpp  nataliecplex.h  verbose.cpp  verbose.h  webserver.cpp  webserver.h
wrappedAlgorithms/NATALIE/src/src/analysis/: analyze.h  gocollection.h
wrappedAlgorithms/NATALIE/src/src/cplex/: cplexgna.h  cplexgnald.h  cplexgnaqp.h  cplexgnasi.h
wrappedAlgorithms/NATALIE/src/src/externlib/gml-parser/: gml_parser.c  gml_parser.h  gml_parser.html  gml_scanner.c  gml_scanner.h
wrappedAlgorithms/NATALIE/src/src/externlib/lemon/: bp_matching.h
wrappedAlgorithms/NATALIE/src/src/externlib/tinyxml/: tinyxml.cpp  tinyxmlparser.cpp
wrappedAlgorithms/NATALIE/src/src/input/: bpblastparser.h  bpcandlistparser.h  bpidentityparser.h  bplgfparser.h  bpparser.h  csvparser.h  edgelistparser.h  gmlparser.h  graphmlparser.h  identityparser.h  ledaparser.h  lgfparser.h  matchinggraph.h  matchinggraphshuffle.h  parser.h  stringparser.h
wrappedAlgorithms/NATALIE/src/src/lagrange/: combinedsolver.h  dualdescentsolver.h  globalproblem.h  globalproblembase.h  globalproblemconstrained.h  lagrangegna.h  lagrangegnacached.h  lagrangegnald.h  lagrangegnaldcached.h  lagrangegnasi.h  lagrangegnasicached.h  lagrangeitfc.h  lagrangesolver.h  subgradientsolver.h
wrappedAlgorithms/NATALIE/src/src/output/: output.h  outputanalyse.h  outputcompstatamc.h  outputcsv.h  outputcsvamc.h  outputdot.h  outputeda.h  outputgml.h  outputjson.h  outputjsonamc.h  outputlgf.h  outputneato.h  outputnoa.h  outputparameters.h  outputparametersamc.h  outputsif.h  outputstat.h  outputstatamc.h
wrappedAlgorithms/NATALIE/src/src/score/: scoremodel.h  scoremodelbitscore.h  scoremodelcoexpressioncontinuous.h  scoremodelcoexpressioncontinuous2.h  scoremodelcoexpressiondiscrete.h  scoremodelcoexpressiondiscreteinverse.h  scoremodelcoexpressionfunction.h  scoremodeledgecorrectness.h
wrappedAlgorithms/multi/netCoffee/include/lemon-1.2.3/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
wrappedAlgorithms/multi/netCoffee/include/lemon-1.2.3/cmake/: version.cmake
wrappedAlgorithms/multi/netCoffee/include/lemon-1.2.3/demo/: Makefile.am  Makefile.in
wrappedAlgorithms/multi/netCoffee/include/lemon-1.2.3/doc/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  Makefile.am  coding_style.dox  dirs.dox  groups.dox  lgf.dox  mainpage.dox  mainpage.dox.in  min_cost_flow.dox
wrappedAlgorithms/multi/netCoffee/include/lemon-1.2.3/doc/images/: bipartite_partitions.eps  connected_components.eps  edge_biconnected_components.eps  node_biconnected_components.eps  strongly_connected_components.eps
wrappedAlgorithms/multi/netCoffee/include/lemon-1.2.3/m4/: lx_check_coin.m4  lx_check_cplex.m4  lx_check_glpk.m4  lx_check_soplex.m4
wrappedAlgorithms/multi/netCoffee/include/lemon-1.2.3/scripts/: Makefile.am  bib2dox.py  bootstrap.sh  chg-len.py  mk-release.sh
wrappedAlgorithms/multi/netCoffee/include/lemon-1.2.3/test/: CMakeLists.txt  Makefile.am  adaptors_test.cc  bellman_ford_test.cc  bfs_test.cc  circulation_test.cc  connectivity_test.cc  dfs_test.cc  digraph_test.cc  dijkstra_test.cc  edge_set_test.cc  euler_test.cc  fractional_matching_test.cc  gomory_hu_test.cc  graph_copy_test.cc  graph_test.cc  graph_test.h  hao_orlin_test.cc  heap_test.cc  lgf_test.cc  lp_test.cc  maps_test.cc  matching_test.cc  min_cost_arborescence_test.cc  min_cost_flow_test.cc  min_mean_cycle_test.cc  path_test.cc  preflow_test.cc  radix_sort_test.cc  suurballe_test.cc  time_measure_test.cc
wrappedAlgorithms/multi/netCoffee/include/lemon-1.2.3/tools/: Makefile.am  dimacs-solver.cc
(+2100 files in other folders)
